k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudtasks-deployment
  namespace: cloudtasks
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloudtasks
  template:
    metadata:
      labels:
        app: cloudtasks
    spec:
      containers:
      - name: cloudtasks
        image: shayandsolomon/cloudtasks:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "512Mi"
            cpu: "500m"
