k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudtasks-service
  namespace: cloudtasks
spec:
  type: ClusterIP
  selector:
    app: cloudtasks
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
